# aoc2024

./: justfile
go/: go.mod  go.sum  utils.go
go/day01/: day01.go
go/day02/: day02.go
go/day03/: day03.go
go/day04/: day04.go
go/day05/: day05.go
go/day06/: day06.go
go/day07/: day07.go
go/day14/: day14.go
go/day15/: day15.go
go/day16/: day16.go
go/day17/: day17.go
go/day18/: day18.go
go/day19/: day19.go
go/day20/: day20.go
input/day11/: input.txt
input/day12/: input.txt
input/day13/: input.txt
input/day16/: input.txt
input/day20/: input.txt
python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  pyproject.toml  utils.py
rust/: Cargo.toml
rust/src/: lib.rs
