[project]
name = "aoc2024"
version = "0.1.0"
description = "Advent of code"
readme = "README.md"
authors = [{ name = "Khanh Duong Quoc", email = "dqkqdlot@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8.1"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["D", "ANN", "T201", "PLR2004", "ISC001", "COM812"]
